<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Recommendations"
        app:iconSpaceReserved="false">

        <Preference
            app:key="interests"
            app:title="Select interests"
            app:summary="Get recommendations by selecting your interests"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="Measurement"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="measurement_distance"
            app:defaultValue="false"
            app:summaryOff="Distances will be displayed in imperial units."
            app:summaryOn="Distances will be displayed in metric units."
            app:title="Use metric for distances"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="measurement_temperature"
            app:defaultValue="false"
            app:summaryOff="Temperature will be displayed in Celsius."
            app:summaryOn="Temperature will be displayed in Fahrenheit."
            app:title="Use Fahrenheit"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
