<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AttractionDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <ImageView
            android:id="@+id/ivAttraction"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/tvAttraction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:text="Test"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="Visit Website"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</FrameLayout>