<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tb_add_location"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_location"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tb_itinerary_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/view_on_map"
        app:showAsAction="ifRoom"/>
</menu>