...
            android:id="@+id/llItineraryDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItineraryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="New Itinerary"
                android:textColor="#000000"
                android:textSize="25sp"
...
            android:text="Tap + to add a location!"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#000000"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItinerary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider"
            android:visibility="gone"/>

    </RelativeLayout>
...
