...
                    android:text="Name"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/ibRemoveItem"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_delete_black_24dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
...
