<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">
    
    <RadioButton
        android:id="@+id/rbAlphabetical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A-Z"
        android:textSize="15sp"/>

    <RadioButton
        android:id="@+id/rbNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance"
        android:textSize="15sp"/>

</RadioGroup>